# reinthalcv

./: .gitignore  Alexander_Reinthal_CV.yaml  README.md  pyproject.toml
classic/: PublicationEntry.j2.tex
rendercv_output/: Alexander_Reinthal_CV.aux  Alexander_Reinthal_CV.html  Alexander_Reinthal_CV.md  Alexander_Reinthal_CV.tex
