[tool.poetry]
name = "reinthalcv"
version = "0.1.0"
description = "Alexander Reinthal's cv"
authors = ["Alexander Reinthal <email@reinthal.me>"]
readme = "README.md"
package-mode = false
[tool.poetry.dependencies]
python = "~3.12.6"
rendercv = "^1.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
